--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
     <title>Imperio Electrónico</title>
-        <meta property="og:image" content="#">
+        <meta property="og:image" content="https://www.imperioelectronico.com/static/icon_i_e.png">
         <meta property="og:image:width" content="389px">
         <meta property="og:image:height" content="542px">
         <meta property="keywords" content="reparacion de celulares, servicio tecnico, servicio tecnico de celulares, reparacion de notebook, servicio tecnico de notebook, reparacion de computadores">
@@ -25,34 +25,34 @@
       rel="icon"
       type="image/png"
       sizes="192x192"
-      href="static/icon_i_e.png"
+      href="static/icon_imperio_electronico.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="512x512"
-      href="static/icon_i_e.png"
+      href="static/icon_imperio_electronico.png"
     />
 
     <link rel="canonical" href="#">
-    <link rel="icon" type="image/png" sizes="16x16" href="static/icon_i_e.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="static/icon_i_e.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="static/icon_i_e.png">
-    <link rel="apple-touch-icon" href="static/icon_i_e.png">
-    <link rel="apple-touch-icon" sizes="57x57" href="static/icon_i_e.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="static/icon_i_e.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="static/icon_i_e.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="static/icon_i_e.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="static/icon_i_e.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="static/icon_i_e.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="static/icon_i_e.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="static/icon_i_e.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="static/icon_imperio_electronico.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="static/icon_imperio_electronico.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="static/icon_imperio_electronico.png">
+    <link rel="apple-touch-icon" href="static/icon_imperio_electronico.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="icon_imperio_electronico.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="static/icon_imperio_electronico.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="static/icon_imperio_electronico.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="static/icon_imperio_electronico.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="static/icon_imperio_electronico.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="static/icon_imperio_electronico.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="static/icon_imperio_electronico.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="static/icon_imperio_electronico.png">
 
     <!--Icon-->
 
-    <link rel="icon" type="image/png" href="static/icon_i_e.png" />
+    <link rel="icon" type="image/png" href="static/icon_imperio_electronico.png" />
     <link rel="manifest" href="manifest.json"/>
-    <link rel="icon" href="static/icon_i_e.png" type="image/png">
+    <link rel="icon" href="static/icon_imperio_electronico.png" type="image/png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
