--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
     <title>Imperio Electrónico</title>
-        <meta property="og:image" content="https://www.imperioelectronico.com/static/icon_i_e.png">
+        <meta property="og:image" content="#">
         <meta property="og:image:width" content="389px">
         <meta property="og:image:height" content="542px">
         <meta property="keywords" content="reparacion de celulares, servicio tecnico, servicio tecnico de celulares, reparacion de notebook, servicio tecnico de notebook, reparacion de computadores">
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                <img src="static/icon_i_e.png" alt="Logo Imperio Electrónico" class="footer-logo">
+                <img src="static/icon_imperio_electronico.png" alt="Logo Imperio Electrónico" class="footer-logo">
                 <p class="mt-2 text-secondary">Imperio Electrónico</p>
             </div>
             <div class="col-md-3 text-center mb-3 mb-md-0">
