--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
     <title>Imperio Electrónico</title>
-        <meta property="og:image" content="#">
+        <meta property="og:image" content="https://www.imperioelectronico.com/static/icon_imperio_electronico.png">
         <meta property="og:image:width" content="389px">
         <meta property="og:image:height" content="542px">
         <meta property="keywords" content="reparacion de celulares, servicio tecnico, servicio tecnico de celulares, reparacion de notebook, servicio tecnico de notebook, reparacion de computadores">
