--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <!-- Google tag (gtag.js) -->
+     <meta name="google-site-verification" content="gHzv1TYSX0ZffffY7dvc-VsRYTrB78UvlunGUNTYytA" />
     
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -112,16 +113,64 @@
                 <div class="col-md-4">
                     <div class="card service-card bg-dark border-secondary h-100">
                         <div class="card-body text-center">
-                            <i class="bi bi-gear-fill service-icon mb-3"></i>
-                            <h5 class="card-title fw-bold">Repuestos y Accesorios</h5>
-                            <p class="card-text">Venta de componentes y accesorios de alta calidad.</p>
+                            <i class="bi bi-tv service-icon mb-3"></i>
+                            <h5 class="card-title fw-bold">Reparación de TV</h5>
+                            <p class="card-text">Reparación de TV, SnartTV y Componentes Electrónicos.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <br>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-lg-8 mx-auto text-center">
+                <h2 class="mb-4">Todo lo que necesitas para tus equipos tecnológicos</h2>
+                <p class="lead mb-4">Descubre nuestra amplia selección de repuestos y accesorios de alta calidad para mantener tus dispositivos en perfectas condiciones.</p>
+                <div class="card shadow-sm border-0">
+                <div class="card-body">
+                    <h4 class="card-title"><b style="color: blue;">Nuestros Productos Principales:</b></h4>
+                    <br>
+                    <br>
+                    <ul class="list-group list-group-flush text-left">
+                        <li class="list-group-item">Venta de Láminas Hydrogel de alta protección.</li>
+                        <li class="list-group-item">Venta de Láminas de vidrio templado.</li>
+                        <li class="list-group-item">Venta de Cargadores completos de carga rápida y segura.</li>
+                        <li class="list-group-item">Venta de Cables de cargadores de diversos tipos (USB-C, Lightning, Micro-USB).</li>
+                        <li class="list-group-item">Y muchos otros accesorios esenciales para tus dispositivos.</li>
+                    </ul>
+                </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="container">
+            <h2 class="text-center mb-4">Nuestro Local</h2>
+            <div class="row g-3">
+            <div class="col-md-4 col-sm-6">
+                <img src="static/img1.jpg" class="img-fluid rounded shadow-sm" alt="Descripción de la imagen 1">
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <img src="static/img2.jpg" class="img-fluid rounded shadow-sm" alt="Descripción de la imagen 2">
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <img src="static/img3.jpg" class="img-fluid rounded shadow-sm" alt="Descripción de la imagen 3">
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <img src="static/img4.jpg" class="img-fluid rounded shadow-sm" alt="Descripción de la imagen 4">
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <img src="static/img6.jpg" class="img-fluid rounded shadow-sm" alt="Descripción de la imagen 5">
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <img src="static/img7.jpg" class="img-fluid rounded shadow-sm" alt="Descripción de la imagen 6">
+            </div>
+            </div>
+        </div>
     </section>
-
 <footer class="footer bg-black text-white py-4">
     <div class="container">
         <div class="row">
