--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
         <br>
         <br>
         <br>
+        <div class="container">
         <div class="row">
             <div class="col-lg-8 mx-auto text-center">
                 <h2 class="mb-4">Todo lo que necesitas para tus equipos tecnológicos</h2>
@@ -143,6 +144,7 @@
                 </div>
                 </div>
             </div>
+        </div>
         </div>
         <br>
         <br>
